# JiPP2

projekt1/: CMakeLists.txt
projekt1/matrixApp/: main.cpp
projekt1/matrixLib/: matrix.cpp  matrix.h
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
zadania/lab10/csv/: CMakeLists.txt  dane.csv  main.cpp
zadania/lab10/zad1-3/: main.cpp
zadania/lab2/zad1/: CMakeLists.txt
zadania/lab2/zad2/: CMakeLists.txt  main.cpp
zadania/lab2/zad3/: CMakeLists.txt  main.cpp
zadania/lab2/zad4/: CMakeLists.txt  czesc1.cpp  main.cpp
zadania/lab3/zad1/: CMakeLists.txt  main.cpp
zadania/lab3/zad2/: CMakeLists.txt  main.cpp
zadania/lab3/zad5/: main.cpp
zadania/lab3/zad6/: CMakeLists.txt  main.cpp
zadania/lab5/zad1/: CMakeLists.txt
zadania/lab5/zad1.2.2/: CMakeLists.txt  main.cpp
zadania/lab5/zad1/include/: Point.h
zadania/lab5/zad1/src/: Point.cpp
zadania/lab5/zad2/: main.cpp
zadania/lab6/zad1/: Node.h  main.cpp
zadania/lab6/zad2/: main.cpp
zadania/lab6/zad3/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h
zadania/lab7/zad1/: main.cpp
zadania/lab7/zad2/: main.cpp
zadania/lab8/: main.cpp
zadania/lab9/zad1/: CMakeLists.txt  Line.cpp  Stop.cpp  vExample.cpp
zadania/lab9/zad2/: main.cpp
